jumping working, need to fix bugs with space 6 and 7?

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -9,6 +9,11 @@
   grid-column: 1 / -1;
 }
 
+.game-message {
+  grid-column: 1 / -1;
+  height: 5vh;
+}
+
 .game-board {
   display: grid;
   grid-template-rows: repeat(8, 1fr);
